# netbox2netshot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
.rpm/: netbox2netshot.spec
src/: main.rs  netbox.rs  netshot.rs
src/netbox2netshot/: common.rs  mod.rs  netbox.rs  netshot.rs
src/rest/: helpers.rs  mod.rs  netbox.rs  netshot.rs
tests/data/: single_device_without_primary_ip.json
tests/data/netbox/: single_device_without_name.json  single_device_without_primary_ip.json  single_good_device.json
tests/data/netshot/: disable_device.json  good_device_registration.json  search.json  single_good_device.json
