[package]
name = "netbox2netshot"
version = "0.0.1"
authors = ["Mathieu Poussin <mpoussin@scaleway.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/scaleway/netbox2netshot"
keywords = ["netbox", "netshot", "synchronization", "network"]
categories = ["command-line-utility"]

[dependencies]
serde = { version = "1.0.125", features = ["derive"]}
structopt = "0.3"
log = "0.4"
simple_logger = "1.11"
reqwest = { version = "0.11", features = ["json"]}
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"