[package]
name = "netbox2netshot"
version = "0.1.12"
authors = ["Mathieu Poussin <mpoussin@scaleway.com>"]
edition = "2018"
description = "Synchronization tool between netbox and netshot"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/scaleway/netbox2netshot"
keywords = ["netbox", "netshot", "synchronization", "network"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0.125", features = ["derive"]}
structopt = "0.3"
log = "0.4"
flexi_logger = "0.19"
reqwest = { version = "0.11", features = ["json", "native-tls", "blocking"]}
anyhow = { version = "1.0", features = ["backtrace"]}

[dev-dependencies]
mockito = "0.30"
ctor = "0.1.20"

[package.metadata.rpm]
package = "netbox2netshot"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
netbox2netshot = { path = "/usr/bin/netbox2netshot" }
